--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Error showing screenshot please try again later</title>
-<meta HTTP-EQUIV="REFRESH" content="0; url=https://www.google.com/">
-</head>
-<body>
-<center>
-<h1>error</h1>
-</center>
-</body>
+  <head>
+        <title>
+        error    </title>
+    <meta name="description" content="LightShot Screenshot.">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; URL=https://www.google.com/">
+  </head>
+
+  <link rel="canonical" href="https://www.google.com/">
 </html>
