--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="card">
       <br />
       <br />
-      <p class="big-txt">Stav</p>
-      <p class="grey">stavexploitz</p>
+      <p class="big-txt">GavinStrikes.wtf</p>
+      <p class="grey">GavinStrikes</p>
       <div class="bottom">
         <div class="center">
           <a href="https://github.com/GavinCoded" class="btn"><p class="fa-brands fa-github logo"></p></a>
