--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StavExploitz's Bio</title>
+    <title>gavinstrikes.wtf</title>
     <script
       src="https://kit.fontawesome.com/cf16def632.js"
       crossorigin="anonymous"
