--- a/success/index.html
+++ b/success/index.html
@@ -59,7 +59,7 @@
         <h1 class="u-align-center u-custom-font u-font-lato u-text u-text-body-alt-color u-text-1" data-animation-name="pulse" data-animation-duration="2000" data-animation-direction="">Thank you!</h1>
         <h3 class="u-text u-text-body-alt-color u-text-2">Your payment has been successfully processed. Please be advised that your purchased product will be delivered to your designated email address within the next hour. If you encounter any issues or delays, we kindly request that you reach out to our customer support team at <a href="mailto:support@oblivity.xyz" target="_new" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">support@oblivity.xyz</a> for prompt assistance. Thank you for your patronage.
         </h3>
-        <a href="https://nicepage.com/k/shopping-cart-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">dashboard</a>
+        <a href="ixviixvi.github.io/dashboard" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">dashboard</a>
       </div>
     </section>
     <section class="u-black u-clearfix u-section-2" id="carousel_70a7">
