--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ with the utmost in exceptional experiences.</p>
                   <h4 class="u-custom-font u-font-lato u-text u-text-default u-text-6"> Monthly Plan</h4>
                   <h1 class="u-custom-font u-font-pt-sans u-text u-text-default u-text-white u-text-7"> $5<span style="font-size: 1.5rem;">/month</span>
                   </h1>
-                  <a href="https://shoppy.gg/product/0A9Sqdk" class="u-black u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-radius-8 u-text-body-alt-color u-btn-2" data-animation-name="flipIn" data-animation-duration="2000" data-animation-direction="X">Proceed Monthly</a>
+                  <a href="oblivity.xyz/purchase" class="u-black u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-radius-8 u-text-body-alt-color u-btn-2" data-animation-name="flipIn" data-animation-duration="2000" data-animation-direction="X">Proceed Monthly</a>
                   <ul class="u-custom-list u-text u-text-8">
                     <li>
                       <div class="u-list-icon u-text-palette-1-base">
@@ -266,7 +266,7 @@ with the utmost in exceptional experiences.</p>
                   <a href="https://shoppy.gg/product/Ij9JE1Q" class="u-active-palette-1-light-2 u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-light-2 u-palette-1-base u-radius-31 u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-3">Save 84%</a>
                   <h1 class="u-custom-font u-font-pt-sans u-text u-text-default u-text-white u-text-11"> $32<span style="font-size: 1.5rem;">/year</span>
                   </h1>
-                  <a href="https://shoppy.gg/product/Ij9JE1Q" class="u-black u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-radius-8 u-text-white u-btn-4" data-animation-name="flipIn" data-animation-duration="2000" data-animation-direction="X">Proceed Yearly</a>
+                  <a href="oblivity.xyz/purchase" class="u-black u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-radius-8 u-text-white u-btn-4" data-animation-name="flipIn" data-animation-duration="2000" data-animation-direction="X">Proceed Yearly</a>
                   <ul class="u-custom-list u-text u-text-12">
                     <li>
                       <div class="u-list-icon u-text-palette-1-base">
