--- a/index.html
+++ b/index.html
@@ -297,5 +297,13 @@ with the utmost in exceptional experiences.</p>
       <img class="u-image u-image-contain u-image-default u-image-1" src="images/f58d51b5-5c09-4716-8370-46dd80a3bc75.png" alt="" data-image-width="623" data-image-height="200">
       <img class="u-image u-image-contain u-image-default u-image-2" src="images/Horizontal-Line-Transparent-Background-3304585231.png" alt="" data-image-width="775" data-image-height="300">
     </section>
-    
+        <section class="u-black u-clearfix u-section-5" id="carousel_70a7">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/f58d51b5-5c09-4716-8370-46dd80a3bc75.png" alt="" data-image-width="623" data-image-height="200">
+        <img class="u-image u-image-contain u-image-default u-image-2" src="images/Horizontal-Line-Transparent-Background-3304585231.png" alt="" data-image-width="775" data-image-height="300">
+        <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
+        <p class="u-text u-text-default u-text-1"> contact@oblivity.xyz</p>
+        <p class="u-text u-text-default u-text-2"> support@oblivity.xyz</p>
+      </div>
+
 </body></html>
