--- a/success/index.html
+++ b/success/index.html
@@ -27,7 +27,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="sec-1369"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="623" data-image-height="200">
+        <a href="https://oblivity.xyz/" class="u-image u-logo u-image-1" data-image-width="623" data-image-height="200">
           <img src="images/f58d51b5-5c09-4716-8370-46dd80a3bc75.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
