--- a/purchase/Home.html
+++ b/purchase/Home.html
@@ -58,8 +58,8 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-custom-font u-font-lato u-text u-text-body-alt-color u-text-1" data-animation-name="pulse" data-animation-duration="2000" data-animation-direction="">Let's get Started</h1>
         <h3 class="u-text u-text-body-alt-color u-text-2">You have chosen to purchase oblivity please select what payment method you will be using below.</h3>
-        <a href="https://shoppy.gg/@oblivitycc" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">PAYPAL</a>
-        <a href="https://shoppy.gg/@oblivitycc" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">CRYPTO<br>
+        <a href="https://www.youtube.com/watch?v=FkzPsly8bpg" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">PAYPAL</a>
+        <a href="https://www.youtube.com/watch?v=FkzPsly8bpg" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">CRYPTO<br>
         </a>
         <a href="https://discord.gg/mVDmd3M9EW" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-3">stripe</a>
         <a href="https://discord.gg/mVDmd3M9EW" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-4">CASHAPP</a>
