--- a/Home.html
+++ b/Home.html
@@ -250,10 +250,10 @@ with the utmost in exceptional experiences.</p>
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-custom-color-1 u-layout-cell u-left-cell u-radius-15 u-shape-round u-size-20 u-layout-cell-4">
                 <div class="u-container-layout u-valign-top u-container-layout-4">
-                  <h4 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-default u-text-3"> Free Plan</h4>
-                  <h1 class="u-custom-font u-font-pt-sans u-text u-text-default u-text-4"> Free</h1>
+                  <h4 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-default u-text-3"> Lifetime Aimbot</h4>
+                  <h1 class="u-custom-font u-font-pt-sans u-text u-text-default u-text-4"> 8$/lifetime</h1>
                   <a href="https://ixviixvi.github.io/dashboard/login" class="u-black u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-radius-8 u-text-body-alt-color u-btn-1" data-animation-name="flipIn" data-animation-duration="2000" data-animation-direction="X">Download Now</a>
-                  <p class="u-text u-text-5"> Aim bot &amp; Trigger bot included.&nbsp;<br>No credit card
+                  <p class="u-text u-text-5"> Aim bot &amp; Trigger bot included.&nbsp;<br>Forums account required.
                   </p>
                 </div>
               </div>
