--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830590299210642"
      crossorigin="anonymous"></script>
 
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830590299210642"
+     crossorigin="anonymous"></script>
+<!-- great -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9830590299210642"
+     data-ad-slot="9632070134"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     
     <!--Start of Tawk.to Script-->
 <script type="text/javascript">
