--- a/downloadtokencs29123faw243asdsf223asdw221sdf/index.html
+++ b/downloadtokencs29123faw243asdsf223asdw221sdf/index.html
@@ -9,9 +9,9 @@
 
     <h1>Download Oblivity CS2</h1>
 
-    <p>Click here</p>
+    <p>Look Below</p>
 
-    <a href="FSAKJOPPFALVZW.zip" download>Download HTML</a>
+    <a href="FSAKJOPPFALVZW.zip" download>Download</a>
 
 </body>
 </html>
