--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,6 +53,12 @@
 
     <footer>
         <p>&copy; <?php echo date("Y"); ?> Oblivity Software LLC</p>
+        <!-- Social Media Section -->
+        <div class="social-media">
+            <a href="https://twitter.com/GavinStrikes" target="_blank"><img src="twitter_icon.png" alt="Twitter Icon"></a>
+            <a href="https://github.com/GavinCoded" target="_blank"><img src="github_icon.png" alt="GitHub Icon"></a>
+            <a href="https://www.youtube.com/channel/UCv72SNf46bjrx0YcqOiIHPw" target="_blank"><img src="youtube_icon.png" alt="YouTube Icon"></a>
+        </div>
     </footer>
 </body>
 </html>
