--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oblivity | #1 Roblox External</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
+        /* Your existing CSS styles */
         * {
             margin: 0;
             padding: 0;
@@ -26,11 +28,15 @@
             padding: 2rem;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background-image: url('header-background.jpg'); /* Add background image */
+            background-size: cover;
+            background-position: center;
         }
 
         header h1,
         header p {
             color: #fff;
+            font-family: 'Arial', sans-serif; /* Change font for headings */
         }
 
         nav {
@@ -113,6 +119,7 @@
             transition: transform 0.3s ease;
             overflow: hidden;
             position: relative;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box-shadow */
         }
 
         .service-card:hover {
@@ -122,10 +129,18 @@
         .service-card h3 {
             color: #007BFF;
             margin-bottom: 1rem;
+            font-size: 1.5rem; /* Increase font size */
         }
 
         .service-card p {
             color: #ccc;
+            margin-bottom: 1rem;
+            font-size: 1.1rem; /* Increase font size */
+            line-height: 1.5; /* Increase line height */
+        }
+
+        .service-card i {
+            font-size: 3rem;
             margin-bottom: 1rem;
         }
 
@@ -157,78 +172,156 @@
         .faq-question {
             font-size: 1.5rem;
         }
+
+        /* Additional styles */
+
+        header h1 {
+            font-size: 2.5rem;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            margin-top: 10px;
+        }
+
+        .purchase-button {
+            display: inline-block;
+            background-color: #007BFF;
+            color: #fff;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .purchase-button:hover {
+            background-color: #0056b3;
+            transform: scale(1.05);
+        }
+
+        .testimonial {
+            margin-top: 3rem;
+            font-size: 1.2rem;
+        }
+
+        .testimonial h3 {
+            margin-top: 1.5rem;
+            font-size: 1.5rem;
+        }
+
+        .social-icons {
+            margin-top: 1.5rem;
+        }
+
+        .social-icons a {
+            color: #fff;
+            font-size: 1.5rem;
+            margin: 0 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            transform: translateY(-3px);
+        }
+
+        .email-button {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            margin-top: 20px;
+            display: inline-block;
+        }
+
+        .email-button:hover {
+            background-color: #0056b3;
+            transform: scale(1.05);
+        }
     </style>
 </head>
 
+<body>
+<nav>
+    <div class="container">
+        <a href="#home">Home</a>
+        <a href="#services">Features</a>
+        <a href="purchase.html">Buy Now</a>
+        <a href="#contact">Contact Us</a>
+    </div>
+</nav>
 
+<header>
+    <div class="container">
+        <h1>Oblivity Roblox</h1>
+        <p>Taking Roblox externals to the next level</p>
+        <a href="purchase.html" class="purchase-button">Purchase Now</a>
+    </div>
+</header>
 
-    <nav>
-        <div class="container">
-            <a href="#home">Home</a>
-             <a href="#services">Features</a>
-            <a href="purchase.html">Buy Now</a>
-            <a href="#contact">Contact Us</a>
-        </div>
-    </nav>
-
-    <section id="home">
-        <div class="container">
-            <h2>Oblivity Roblox External</h2>
-          
-            <a href="purchase.html"><button>Purchase</button></a>
-        </div>
-    </section>
-
-    <section id="services">
-        <div class="container">
-            <h2>Why Oblivity?</h2>
-            <div class="services-container">
-                <div class="service-card">
-                    <h3>Undetectable</h3>
-                    <p>Oblivity has security features that prevent you from getting banned. We can't promise this won't get you banned, but it's very unlikely.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Good preformace</h3>
-                    <p>Unlike our other competitors, we make sure you still have a good framerate while using Oblivity</p>
-                </div>
-                <div class="service-card">
-                    <h3>Support</h3>
-                    <p>We have active support members to help you with any issues you may have.</p>
-                </div>
+<section id="services">
+    <div class="container">
+        <h2>Why Choose Oblivity?</h2>
+        <div class="services-container">
+            <div class="service-card">
+                <i class="fas fa-lock fa-3x"></i>
+                <h3>Undetectable</h3>
+                <p>Our advanced security features minimize the risk of detection and bans.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-chart-line fa-3x"></i>
+                <h3>Optimized Performance</h3>
+                <p>Enjoy smooth gameplay without sacrificing performance.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-headset fa-3x"></i>
+                <h3>Dedicated Support</h3>
+                <p>Our support team is ready to assist you with any issues or questions.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section id="testimonials">
-        <div class="container">
-            <h2>FAQ</h2>
-            <div class="testimonial">
-                <p class="faq-question">How much does Oblivity cost?</p>
-                <p>Oblivity Costs $5/monthly or $32/yearly</p>
-            </div>
-            <div class="testimonial">
-                <p class="faq-question">What is Oblivity?</p>
-                <p>Oblivity is a roblox external</p>
-                <p class="faq-question">What games does Oblivity support?</p>
-                <p>Oblivity supports all roblox games, However it may not work on every game</p>
-            </div>
+<section id="testimonials">
+    <div class="container">
+        <h2>FAQ</h2>
+        <div class="testimonial">
+            <h3>How much does Oblivity cost?</h3>
+            <p>Oblivity costs $5/monthly or $32/yearly.</p>
         </div>
-    </section>
+        <div class="testimonial">
+            <h3>What is Oblivity?</h3>
+            <p>Oblivity is a Roblox external application designed to enhance your gaming experience.</p>
+            <h3>What games does Oblivity support?</h3>
+            <p>Oblivity supports all Roblox games, although compatibility may vary.</p>
+        </div>
+    </div>
+</section>
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p>Have questions or need assistance? Contact us here:</p>
-            <p>Contact: contact@oblivity.xyz</p>
-            <p>Support: support@oblivity.xyz</p>
-        </div>
-    </section>
+<section id="contact">
+    <div class="container">
+        <h2>Contact Us</h2>
+        <p>Have questions or need assistance? Reach out to us:</p>
+        <p>Email: <a href="mailto:contact@oblivity.xyz">contact@oblivity.xyz</a></p>
+        <p>Support: <a href="mailto:support@oblivity.xyz">support@oblivity.xyz</a></p>
+    </div>
+</section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2022 - 2024 Oblivity Software LLC. All rights reserved.</p>
+<footer>
+    <div class="container">
+        <div class="social-icons">
+            <a href="https://twitter.com/Oblivitysoft"><i class="fab fa-twitter"></i></a>
+            <a href="https://t.me/oblivityupdates"><i class="fab fa-telegram"></i></a>
+            <a href="mailto:contact@oblivity.xyz"><i class="fas fa-envelope"></i></a>
         </div>
-    </footer>
+        <p>&copy; 2022 - 2024 Oblivity Software LLC. All rights reserved.</p>
+    </div>
+</footer>
 </body>
 
 </html>
