--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <div class="container">
         <a href="#home">Home</a>
         <a href="#services">Features</a>
-        <a href="purchase.html">Buy Now</a>
+        <a href="apply.html">Buy Now</a>
         <a href="#contact">Contact Us</a>
     </div>
 </nav>
