--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <div class="container">
         <h1>Oblivity Roblox</h1>
         <p>Taking Roblox externals to the next level</p>
-        <a href="purchase.html" class="purchase-button">Purchase Now</a>
+        <a href="apply.html" class="purchase-button">Purchase Now</a>
     </div>
 </header>
 
