--- a/apply/index.html
+++ b/apply/index.html
@@ -1,173 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oblivity Application</title>
-    <script src="https://hcaptcha.com/1/api.js" async defer></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #121212; /* Dark background color */
-            color: #fff; /* Light text color */
-        }
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #333; /* Dark container background color */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow */
-        }
-        h1 {
-            text-align: center;
-        }
-        form {
-            margin-top: 20px;
-        }
-        label, input, textarea {
-            display: block;
-            margin-bottom: 10px;
-            color: #fff; /* Light text color */
-        }
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #666; /* Dark border color */
-            border-radius: 5px;
-            box-sizing: border-box;
-            background-color: #444; /* Dark input background color */
-            color: #fff; /* Light text color */
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            font-size: 20px;
-            text-align: center;
-            z-index: 9999;
-        }
-        .overlay-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        .overlay.show {
-            display: block;
-        }
-        .checkmark {
-            font-size: 100px; /* Adjust size as needed */
-            color: #4CAF50; /* Checkmark color */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Let's get started</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      overflow: hidden;
+      background: linear-gradient(135deg, #1a1a1a, #121212);
+      animation: animateBackground 20s linear infinite;
+    }
+
+    .panel {
+      background-color: rgba(34, 34, 34, 0.9);
+      border-radius: 10px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+      padding: 30px;
+      width: 80%;
+      max-width: 500px;
+    }
+
+    .main {
+      text-align: center;
+      color: #fff;
+    }
+
+    .product-details {
+      margin-bottom: 30px;
+    }
+
+    .product-title {
+      font-size: 24px;
+      margin-bottom: 15px;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    .product-price {
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: #f2c039;
+      font-size: 20px;
+    }
+
+    .payment-methods {
+      display: flex;
+      justify-content: center;
+      margin-top: 30px;
+    }
+
+    .payment-method {
+      border: 2px solid transparent;
+      border-radius: 6px;
+      cursor: pointer;
+      margin: 0 10px;
+      transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+      display: inline-flex;
+      align-items: center;
+      font-size: 16px;
+      text-transform: uppercase;
+      padding: 12px 24px;
+      font-weight: bold;
+      color: #fff;
+      background-color: transparent;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .payment-method:hover {
+      filter: brightness(1.2);
+      transform: translateY(-3px);
+      background-color: rgba(255, 255, 255, 0.1);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .payment-icon {
+      margin-right: 10px;
+    }
+
+    .disclaimer {
+      font-size: 12px;
+      margin-top: 30px;
+      color: #ccc;
+      text-align: center;
+    }
+
+    .title {
+      font-size: 36px;
+      margin-bottom: 20px;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    .paypal {
+      background-color: #b8860b;
+    }
+
+    .credit-card {
+      background-color: #0066cc;
+    }
+
+    .crypto {
+      background-color: #696969;
+    }
+
+    .paypal:hover, .paypal:focus {
+      border-color: #b8860b;
+    }
+
+    .credit-card:hover, .credit-card:focus {
+      border-color: #0066cc;
+    }
+
+    .crypto:hover, .crypto:focus {
+      border-color: #696969;
+    }
+
+    .modal-background {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 9999;
+    }
+
+    .modal-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+      text-align: center;
+    }
+
+    .close-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+      font-size: 20px;
+      color: #888;
+    }
+
+    .loading {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 9998;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .loading-spinner {
+      border: 4px solid rgba(255, 255, 255, 0.3);
+      border-top: 4px solid #fff;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
+<div class="panel">
+  <div class="main">
+    <h2 class="title">Let's get started</h2>
+    <div class="product-details">
+      <h3 class="product-title">Oblivity External</h3>
+      <p class="product-price">$19.99</p>
+      <p>One Time Payment</p>
+    </div>
+    <div class="payment-methods">
+      <button class="payment-method paypal" onclick="showModal()"><i class="fab fa-paypal payment-icon"></i> PayPal</button>
+      <button class="payment-method credit-card" onclick="showModal()"><i class="far fa-credit-card payment-icon"></i> Credit Card</button>
+      <button class="payment-method crypto" onclick="showModal()"><i class="fab fa-bitcoin payment-icon"></i> Crypto</button>
+    </div>
+    <p class="disclaimer">By purchasing, you agree to Oblivity Software LLC's terms of service.</p>
 
-<div class="container">
-    <h1>Oblivity Application</h1>
-    <p>In order to purchase Oblivity, you must apply. Please put effort into it!</p>
-    <form id="applicationForm" action="#" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="discordID">Discord ID:</label>
-        <input type="text" id="discordID" name="discordID" required>
-
-        <label for="message">Why you want oblivity:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
-
-        <!-- hCaptcha widget -->
-        <div class="h-captcha" data-sitekey="3b38a7e2-d756-452a-b590-7a9d5af765d3" required></div>
-
-        <button type="submit">Submit</button>
-    </form>
+  </div>
 </div>
 
-<div class="overlay" id="successOverlay">
-    <div class="overlay-text">
-        <span class="checkmark">&#10003;</span> <!-- Checkmark icon -->
-        <p>Your application was submitted successfully!</p>
-        <p>You will receive an email if you are accepted or denied. Please allow us up to 7 days to review your application. Also, check your spam folder if you don't see an email within 7 days.</p>
-    </div>
+<div class="modal-background" id="modalBackground" style="display: none;">
+  <div class="modal-content">
+    <span class="close-icon" onclick="hideModal()">&times;</span>
+    <p>Oblivity is not available to purchase yet. Please check back later!</p>
+  </div>
 </div>
 
-<div class="overlay" id="errorOverlay">
-    <div class="overlay-text">
-        <p>There was an error submitting the application.</p>
-        <p>Please try again later.</p>
-    </div>
+<div class="loading" id="loading">
+  <div class="loading-spinner"></div>
 </div>
 
 <script>
-    document.getElementById('applicationForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        
-        // Verify hCaptcha token
-        var hcaptchaToken = document.querySelector('.h-captcha [name="h-captcha-response"]').value;
-        if (!hcaptchaToken) {
-            alert('Please complete the captcha.');
-            return;
-        }
+  function showModal() {
+    document.getElementById('loading').style.display = 'flex';
+    setTimeout(() => {
+      document.getElementById('modalBackground').style.display = 'flex';
+      document.getElementById('loading').style.display = 'none';
+    }, 3000);
+  }
 
-        // Show success overlay immediately
-        document.getElementById('successOverlay').classList.add('show');
-
-        var formData = new FormData(this);
-
-        var xhr = new XMLHttpRequest();
-        xhr.open('POST', 'https://discord.com/api/webhooks/1095462233233969354/KpwfTQWJo9aqudF238I8KByRw1tQps_5es9pfVXtyl5yhN9ZvrAdDSQ_JZSbsDGskk3O', true);
-        xhr.setRequestHeader('Content-Type', 'application/json');
-
-        xhr.onload = function () {
-            if (xhr.status !== 200) {
-                document.getElementById('errorOverlay').classList.add('show');
-                setTimeout(function(){
-                    document.getElementById('errorOverlay').classList.remove('show');
-                }, 7000); // Hide after 7 seconds
-            }
-        };
-
-        var data = {
-            content: "New application received!",
-            embeds: [
-                {
-                    title: "New Application",
-                    color: 0x4CAF50,
-                    fields: [
-                        { name: "Name", value: formData.get('name'), inline: true },
-                        { name: "Email", value: formData.get('email'), inline: true },
-                        { name: "Discord ID", value: formData.get('discordID'), inline: true },
-                        { name: "Message", value: formData.get('message') }
-                    ]
-                }
-            ]
-        };
-
-        xhr.send(JSON.stringify(data));
-    });
+  function hideModal() {
+    document.getElementById('modalBackground').style.display = 'none';
+  }
 </script>
-
 </body>
 </html>
