--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <h2>FAQ</h2>
         <div class="testimonial">
             <h3>How much does Oblivity cost?</h3>
-            <p>Oblivity costs $5/monthly or $32/yearly.</p>
+            <p>Oblivity costs $19.99 for lifetime.</p>
         </div>
         <div class="testimonial">
             <h3>What is Oblivity?</h3>
