--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="services-container">
             <div class="service-card">
                 <i class="fas fa-lock fa-3x"></i>
-                <h3>Undetectable</h3>
+                <h3>Security</h3>
                 <p>Our advanced security features minimize the risk of detection and bans.</p>
             </div>
             <div class="service-card">
