--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             transition: background-color 0.3s ease;
             position: relative;
             z-index: 1;
+            backdrop-filter: blur(10px);
+        }
+
+        header::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.4);
+            z-index: -1;
         }
 
         header h1 {
@@ -83,6 +95,7 @@
             top: 0;
             z-index: 1000;
             transition: background-color 0.3s ease;
+            backdrop-filter: blur(10px);
         }
 
         nav a {
@@ -303,6 +316,17 @@
                 font-size: 1em;
             }
         }
+
+        .logo {
+            display: inline-block;
+            margin-right: 20px;
+        }
+
+        .logo img {
+            width: 180px;
+            height: auto;
+        }
+
     </style>
 </head>
 
@@ -396,6 +420,15 @@
         function loginClicked() {
             alert("Not implemented");
         }
+
+        window.addEventListener('scroll', function () {
+            const header = document.querySelector('header');
+            if (window.scrollY > 0) {
+                header.classList.add('blurred');
+            } else {
+                header.classList.remove('blurred');
+            }
+        });
     </script>
 </body>
 
