--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             color: #fff;
             text-align: center;
             padding: 80px 0;
-            transition: background-color 0.3s ease;
             position: relative;
             z-index: 1;
             backdrop-filter: blur(10px);
@@ -67,7 +66,7 @@
 
         .login-button {
             display: inline-block;
-            background-color: #0056b3;
+            background-color: #007BFF;
             color: #fff;
             padding: 12px 24px;
             border: none;
@@ -75,6 +74,7 @@
             font-size: 1.1em;
             text-decoration: none;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .login-button i {
@@ -82,8 +82,9 @@
         }
 
         .login-button:hover {
-            background-color: #004080;
-            transform: scale(1.05);
+            background-color: #0056b3;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
         nav {
@@ -115,6 +116,11 @@
             padding: 80px 0;
             position: relative;
             z-index: 1;
+            background: linear-gradient(to right, #1f364d, #304e6d);
+            border-radius: 20px;
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+            padding: 40px;
+            margin-bottom: 40px;
         }
 
         #services h2 {
@@ -126,25 +132,26 @@
 
         .services-container {
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
             align-items: stretch;
             flex-wrap: wrap;
         }
 
         .service-card {
-            background: linear-gradient(to right, #1f364d, #304e6d);
+            background: linear-gradient(to right, #26567b, #0b1e34);
             border-radius: 10px;
             padding: 40px 20px;
             margin: 20px;
             text-align: center;
             transition: transform 0.3s ease;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            flex: 0 0 calc(33.33% - 40px);
-            max-width: calc(33.33% - 40px);
+            flex: 0 0 calc(30% - 40px);
+            max-width: calc(30% - 40px);
         }
 
         .service-card:hover {
-            transform: translateY(-10px);
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
 
         .service-card h3 {
@@ -204,6 +211,11 @@
             position: relative;
             z-index: 1;
             text-align: center;
+            background: linear-gradient(to right, #1f364d, #304e6d);
+            border-radius: 20px;
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+            padding: 40px;
+            margin-bottom: 40px;
         }
 
         #connect h2 {
@@ -221,15 +233,18 @@
             color: #fff;
             text-decoration: none;
             margin: 0 15px;
-            padding: 10px 20px;
-            border-radius: 5px;
+            padding: 15px 30px;
+            border-radius: 30px;
             background-color: #7289da;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: inline-block;
         }
 
         .social-buttons a:hover {
             background-color: #677bc4;
             transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
         footer {
@@ -271,14 +286,15 @@
             display: inline-block;
             background-color: #007BFF;
             color: #fff;
-            padding: 12px 24px;
+            padding: 15px 30px;
             border: none;
-            border-radius: 5px;
+            border-radius: 30px;
             font-size: 1.1em;
             text-decoration: none;
             transition: background-color 0.3s ease, transform 0.3s ease;
             margin-top: 20px;
             cursor: pointer;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .purchase-button i {
@@ -288,6 +304,7 @@
         .purchase-button:hover {
             background-color: #0056b3;
             transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
         .sticky header {
@@ -297,15 +314,15 @@
 
         @media screen and (max-width: 1200px) {
             .service-card {
-                flex: 0 0 calc(50% - 40px);
-                max-width: calc(50% - 40px);
+                flex: 0 0 calc(33.33% - 40px);
+                max-width: calc(33.33% - 40px);
             }
         }
 
         @media screen and (max-width: 768px) {
             .service-card {
-                flex: 0 0 calc(100% - 40px);
-                max-width: calc(100% - 40px);
+                flex: 0 0 calc(50% - 40px);
+                max-width: calc(50% - 40px);
             }
 
             header h1 {
@@ -325,6 +342,36 @@
         .logo img {
             width: 180px;
             height: auto;
+        }
+
+        .faq-panel {
+            background: linear-gradient(to right, #26567b, #0b1e34);
+            border-radius: 10px;
+            padding: 40px 20px;
+            margin: 20px;
+            text-align: center;
+            transition: transform 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            flex: 0 0 calc(100% - 40px);
+            max-width: calc(100% - 40px);
+        }
+
+        .faq-panel:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .faq-panel h3 {
+            color: #007BFF;
+            font-size: 1.8em;
+            margin-bottom: 20px;
+        }
+
+        .faq-panel p {
+            color: #ddd;
+            font-size: 1.1em;
+            line-height: 1.6;
+            margin-bottom: 20px;
         }
 
     </style>
@@ -374,16 +421,20 @@
 
     <section id="testimonials">
         <div class="container">
-            <h2>FAQ</h2>
-            <div class="testimonial">
-                <h3>How much does Oblivity cost?</h3>
-                <p>Oblivity costs $19.99 for a lifetime.</p>
-            </div>
-            <div class="testimonial">
-                <h3>What is Oblivity?</h3>
-                <p>Oblivity is a Roblox external application designed to enhance your gaming experience.</p>
-                <h3>What games does Oblivity support?</h3>
-                <p>Oblivity supports all Roblox games, although compatibility may vary.</p>
+            <h2>Frequently Asked Questions</h2>
+            <div class="services-container">
+                <div class="faq-panel">
+                    <h3>How much does Oblivity cost?</h3>
+                    <p>Oblivity costs $19.99 for a lifetime.</p>
+                </div>
+                <div class="faq-panel">
+                    <h3>What is Oblivity?</h3>
+                    <p>Oblivity is a Roblox external application designed to enhance your gaming experience.</p>
+                </div>
+                <div class="faq-panel">
+                    <h3>What games does Oblivity support?</h3>
+                    <p>Oblivity supports all Roblox games, although compatibility may vary.</p>
+                </div>
             </div>
         </div>
     </section>
