--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="tos.html">Terms of Service</a>
             </div>
             <div class="social-icons">
                 <a href="https://twitter.com/Oblivitysoft"><i class="fab fa-twitter"></i></a>
