Company Bought Out, Goodbye!

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                 <a href="https://twitter.com/Oblivitysoft"><i class="fab fa-twitter"></i></a>
                 <a href="mailto:contact@oblivity.xyz"><i class="fas fa-envelope"></i></a>
             </div>
-            <p>&copy; 2022 - 2024 Oblivity Software LLC. All rights reserved.</p>
+            <p>&copy; 2022 - 2024 Yeezy LLC. All rights reserved.</p>
         </div>
     </footer>
 
